fix: Survey Page - Overflow Error

--- a/src/components/Survey.css
+++ b/src/components/Survey.css
@@ -33,7 +33,7 @@
 }
 
 .header {
-    height: 70px;
+    height: 2vh;
 }
 
 .question {
